# langmask

./: .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-tests.yml
langmask/: __init__.py  language_codes.py  masker.py  model.py
langmask/detectors/: __init__.py  asian.py  european.py  utils.py
scripts/: format_and_commit.sh
tests/: test_detectors.py  test_integration.py  test_masker.py
