[project]
name = "langmask"
version = "0.1.0"
description = "LLMの出力言語を制御するためのトークンマスキングライブラリ"
authors = [
    {name = "Hajime Yagi", email = "hajime.yagi@example.com"},
]
dependencies = [
    "torch>=1.10.0",
    "transformers>=4.20.0",
    "sentencepiece",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint>=2.17.0",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true 